# QtMyBatisORM

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists.txt.before_ide_fix  CMakePresets.json  README.md  fix_moc.sh
.cache/clangd/index/: DataModels.h.C9827FD30E5A2DBC.idx  basic_example.cpp.2C74E59F7E609C16.idx  cachemanager.cpp.245A85DB384882B5.idx  cachemanager.h.C38EDBFC64BD9BA5.idx  configurationmanager.cpp.04C7E6B448312F56.idx  configurationmanager.h.B8C3F80E615FF995.idx  connectionpool.cpp.ED5957D06FE25B5D.idx  connectionpool.h.FAFC99B7A5E65947.idx  connectionpool_monitor.cpp.BB8044C122142DCE.idx  dynamicsqlprocessor.cpp.444CB5EA6F029053.idx  dynamicsqlprocessor.h.297F5878CFCD7626.idx  executor.cpp.244E169B591F9944.idx  executor.h.6E2497D9A98942EE.idx  export.h.F9C460E67F219CD3.idx  jsonconfigparser.cpp.5295FAF7085637E1.idx  jsonconfigparser.h.9D533C9036F672C0.idx  logger.cpp.6588AC2D62C860C4.idx  logger.h.FF820BDCDC80B32C.idx  mapperproxy.cpp.14F16E54ECD4F1E0.idx  mapperproxy.h.9F3107DB35BF1D38.idx  mapperregistry.cpp.00FD5CB33CACB674.idx  mapperregistry.h.364D9B0078A53F82.idx  objectpool.h.84444E3B31003763.idx  parameterhandler.cpp.A408B6B4AE9B5216.idx  parameterhandler.h.0154DAC6EBE26152.idx  qtmybatisexception.cpp.29F50016F8451401.idx  qtmybatisexception.h.03EEE873151ABC52.idx  qtmybatisorm.cpp.FC1DE0E69717DD99.idx  qtmybatisorm.h.F4AB59E8B8CFCB97.idx  resulthandler.cpp.CF0CC850DB6079FB.idx  resulthandler.h.571B9B38BC1841FE.idx  run_cache_integration_test.cpp.E172341AC9C01CB6.idx  run_cachemanager_test.cpp.8F4C0147E50AA809.idx  run_configurationmanager_test.cpp.6AA54DB9BF1B5F9F.idx  run_connectionpool_monitoring_test.cpp.E85675AEEED5C588.idx  run_connectionpool_test.cpp.68CF7C30631A32E8.idx  run_dynamicsqlprocessor_test.cpp.3B2B5F4618D9FE31.idx  run_end_to_end_integration_test.cpp.2AFE20369EC4F90C.idx  run_exception_integration_test.cpp.574A93146301C1AE.idx  run_executor_test.cpp.EB055F9E0D04A82E.idx  (+52 more)
.specstory/history/: 2025-07-18_10-17Z-解决项目编译问题.md
cmake/: QtMyBatisORMConfig.cmake.in
docs/: bug_fix_simple_helper_test.md  cache_integration_implementation.md  debugging_guide.md  design.md  integration_testing.md  lru_cache_implementation.md  mapper_integration_usage.md  optimization_summary.md  performance_optimization.md  performance_optimization_results.md  project_completion_summary.md  requirements.md  simplified_usage_guide.md  tasks.md
examples/: CMakeLists.txt  basic_example.cpp  mysql_example.cpp  new_format_example.cpp  sqlite_example.cpp
examples/demo_project/: CMakeLists.txt  README.md  debug_sql.cpp  main.cpp  simple_test.cpp  test_count.cpp  test_count_simple.cpp  verify_fix.cpp  使用文档.md
examples/demo_project/dao/: coursedao.cpp  coursedao.h  studentdao.cpp  studentdao.h
examples/demo_project/models/: course.cpp  course.h  student.cpp  student.h
examples/demo_project/resources/: demo_resources.qrc
examples/demo_project/resources/config/: database.json
examples/demo_project/resources/sql/: course.sql  enrollment.sql  init.sql  student.sql
examples/demo_project/service/: educationservice.cpp  educationservice.h
include/QtMyBatisORM/: DataModels.h  cachemanager.h  configurationmanager.h  connectionpool.h  datamodels.h  dynamicsqlprocessor.h  executor.h  export.h  jsonconfigparser.h  logger.h  mapperproxy.h  mapperregistry.h  objectpool.h  parameterhandler.h  qtmybatisexception.h  qtmybatishelper.h  qtmybatisorm.h  resulthandler.h  session.h  session_impl.h  sessionfactory.h  sessionfactory_impl.h  statementhandler.h  xmlmapperparser.h
src/: qtmybatisorm.cpp
src/cache/: cachemanager.cpp
src/config/: jsonconfigparser.cpp  xmlmapperparser.cpp
src/core/: configurationmanager.cpp  dynamicsqlprocessor.cpp  executor.cpp  executor_optimized.cpp  logger.cpp  parameterhandler.cpp  resulthandler.cpp  session.cpp  sessionfactory.cpp  statementhandler.cpp
src/exception/: qtmybatisexception.cpp
src/helper/: qtmybatishelper.cpp
src/mapper/: mapperproxy.cpp  mapperregistry.cpp
src/pool/: connectionpool.cpp  connectionpool_monitor.cpp
tests/: CMakeLists.txt  run_cache_integration_test  run_cache_integration_test.cpp  run_cachemanager_test.cpp  run_configurationmanager_test.cpp  run_connectionpool_monitoring_test.cpp  run_connectionpool_test.cpp  run_dynamicsqlprocessor_test.cpp  run_end_to_end_integration_test.cpp  run_exception_integration_test.cpp  run_executor_test.cpp  run_jsonconfigparser_test.cpp  run_logger_test.cpp  run_mapperproxy_test.cpp  run_mapperregistry_test.cpp  run_multi_database_integration_test.cpp  run_parameterhandler_test.cpp  run_performance_benchmark_test.cpp  run_qtmybatisexception_test.cpp  run_qtmybatisorm_test.cpp  run_resulthandler_test.cpp  run_session_mapper_integration_test.cpp  run_session_test.cpp  run_session_transaction_test.cpp  run_sessionfactory_test.cpp  run_xmlmapperparser_test.cpp  test_cache_integration.cpp  test_cache_integration_real  test_cache_integration_real.cpp  test_cachemanager.cpp  test_configurationmanager.cpp  test_connectionpool.cpp  test_connectionpool_monitoring.cpp  test_datamodels.cpp  test_dynamicsqlprocessor.cpp  test_end_to_end_integration.cpp  test_exception_integration.cpp  test_executor.cpp  test_jsonconfigparser.cpp  test_logger.cpp  (+18 more)
tests/resources/: test_config_invalid.json  test_config_malformed.json  test_config_minimal.json  test_config_valid.json  test_mapper_invalid.xml  test_mapper_malformed.xml  test_mapper_valid.xml
